add new pages and changed twitter color

--- a/again.html
+++ b/again.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>私の行きたい場所</title>
+        <title>再訪 ｜ 私の行きたい場所</title>
         <meta name="description" contents="私が行きたい場所を三つのカテゴリーに分けて紹介しています。">
         <meta name="keywords" contents="行きたい国, 行きたい場所, 海外, 日本, 観光">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
@@ -38,12 +38,9 @@
         
         <div class="main">
             <div class="intro">
-                <h4>はじめに<span class="cinzel">Intro</span></h4>
-                <p>このサイトでは、私が行ってみたいと思う場所について場所について紹介しています。<br>
-                行ったことのない国、行ったことのない日本の場所、そしてもう一度訪れたい場所の３つに分けて紹介しています。<br>
-                私自身旅行をすることに興味があり、今後いろいろなところに行って、様々な経験をしたいと思いこのようなサイトを作りました。<br>
-                また、私自身がwebデザイナーについて勉強していることもあり、今回練習の一環として一からこのサイトを作っています。<br>
-                サイトの内容や、サイト自体についてのフィードバックや感想などをいただけると、とても嬉しく思います！</p>
+                <h4>再訪<span class="cinzel">Again</span></h4>
+                <p style=" text-align:center">もう一度訪れたい場所を国内国外問わず紹介します。<br>
+                    旅行で行った場所、留学として実際に住んでいた場所など思いでのある場所です！</p>
             </div>
         </div>
         
