--- a/overseas.html
+++ b/overseas.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>私の行きたい場所</title>
+        <title>海外 ｜ 私の行きたい場所</title>
         <meta name="description" contents="私が行きたい場所を三つのカテゴリーに分けて紹介しています。">
         <meta name="keywords" contents="行きたい国, 行きたい場所, 海外, 日本, 観光">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
@@ -25,7 +25,7 @@
                     <a href="index.html"><h3>はじめに<span class="cinzel">Intro</span></h3></a>
                 </li>
                 <li>
-                    <a href="overseas.html"><h3>海外<span class="cinzel">Overseas</span></h3></a>
+                    <a href="overseas"><h3>海外<span class="cinzel">Overseas</span></h3></a>
                 </li>
                 <li>
                     <a href="japan.html"><h3>日本<span class="cinzel">Japan</span></h3></a>
@@ -38,12 +38,10 @@
         
         <div class="main">
             <div class="intro">
-                <h4>はじめに<span class="cinzel">Intro</span></h4>
-                <p>このサイトでは、私が行ってみたいと思う場所について場所について紹介しています。<br>
-                行ったことのない国、行ったことのない日本の場所、そしてもう一度訪れたい場所の３つに分けて紹介しています。<br>
-                私自身旅行をすることに興味があり、今後いろいろなところに行って、様々な経験をしたいと思いこのようなサイトを作りました。<br>
-                また、私自身がwebデザイナーについて勉強していることもあり、今回練習の一環として一からこのサイトを作っています。<br>
-                サイトの内容や、サイト自体についてのフィードバックや感想などをいただけると、とても嬉しく思います！</p>
+                <h4>海外<span class="cinzel">Overseas</span></h4>
+                <p style=" text-align:center">行ってみたい６つの国を紹介します。<br>
+                    １つの国をとっても、その国内には異なるみ魅力を持つスポットがたくさんあります！
+                </p>
             </div>
         </div>
         
